updating hero, fixing case study TOC on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,7 +47,8 @@ a {
 }
 
 
-ul, ol {
+ul,
+ol {
     padding-left: 1em;
 }
 
@@ -323,8 +324,8 @@ ul.mobilenav {
             transition: all 0.3s ease 0s;
 
             &:hover {
-                background: $light_blue;
-                box-shadow: $blue_button_box_shadow;
+                background: $blue;
+                box-shadow: $blue_button_hover_box_shadow;
                 color: $white;
             }
         }
@@ -341,8 +342,8 @@ ul.mobilenav {
             display: block;
 
             &:hover {
-                background: $light_blue;
-                box-shadow: $blue_button_box_shadow;
+                background: $blue;
+                box-shadow: $blue_button_hover_box_shadow;
                 color: $white;
             }
         }
@@ -361,8 +362,8 @@ ul.mobilenav {
             box-shadow: $white_button_box_shadow;
 
             &:hover {
-                background: $light_blue;
-                box-shadow: $blue_button_box_shadow;
+                background: $blue;
+                box-shadow: $blue_button_hover_box_shadow;
                 color: $white;
             }
         }
@@ -472,9 +473,15 @@ div.case_study_page {
         flex-wrap: wrap;
         z-index: 45;
         padding-top: 0.5em;
+        justify-content: center;
 
         li {
             width: 15%;
+            margin-right: 1em;
+
+            a {
+                padding: 0.5em 0;
+            }
         }
 
         .list-grou-item {
@@ -586,13 +593,14 @@ div.hero {
 
     img {
         position: absolute;
-        top: -3em;
-        right: -10%;
-        width: 58%;
+        top: -4em;
+        right: -3%;
+        width: 50%;
         z-index: -5;
         object-fit: cover;
+        /*
         transform:
-            perspective(1000px) rotateX(4deg) rotateY(-16deg) rotateZ(4deg);
+            perspective(1000px) rotateX(4deg) rotateY(-16deg) rotateZ(4deg);*/
     }
 }
 
@@ -1129,7 +1137,7 @@ div.contact {
         grid-template-columns: 10% repeat(10, 1fr) 10%;
         grid-template-rows: auto;
         grid-row-gap: 2em;
-
+        overflow: hidden;
         /* ---------- Section Heads ---------- */
 
         /* ---------- Section Counter ---------- */
@@ -1807,6 +1815,7 @@ div.contact {
 
         /* ------------- Forest Service Case Study ------------- */
         &.cs_03 {
+            overflow: hidden;
 
             h3,
             h2::before {
@@ -1824,13 +1833,17 @@ div.contact {
 
             .case_study_head {
                 @include green_clay_card;
-                grid-area: 1 / 2 / 1 / span 6;
                 padding: 2.5em 3em;
-                margin-top: 5em;
+                margin-top: 13em;
+
+                h1 {
+                    font-size: 32px;
+                    line-height: 36px;
+                }
             }
 
             .blob_01 {
-                grid-area: 1 / 1 / span 2 / span-all;
+                grid-area: 1 / 1 / span 2 / span 12;
             }
 
             div {
@@ -2479,7 +2492,7 @@ div.contact {
 
         a.button {
             padding: 0.1em 1.5em;
-            margin: 18em auto 0 auto;
+            margin: 16em auto 0 auto;
         }
 
         img {
@@ -2586,10 +2599,11 @@ div.contact {
 
             /* ---------- HERO ---------- */
             .case_study_head {
-                grid-area: 1 / 1 / 1 / span 12;
+                grid-area: 1 / 2 / 1 / span 10;
+                text-align: center;
                 padding-bottom: 3em;
                 padding-top: 6em;
-                margin-top: 0;
+                margin-top: 5em;
 
                 h1 {
                     text-align: center;
@@ -2931,6 +2945,10 @@ div.contact {
             }
 
             &.cs_03 {
+                & div.case_study_head {
+                    padding: 1.5em 2em;
+                }
+
                 & div.research {
                     div.site_analysis {
                         >div {
@@ -2996,6 +3014,17 @@ div.contact {
                     }
                 }
 
+                & div.conclusion {
+                    .cards {
+                        flex-direction: column;
+
+                        div {
+                            max-width: 100%;
+                            margin-bottom: 1.5em;
+                        }
+                    }
+                }
+
             }
 
 
@@ -3041,7 +3070,7 @@ div.contact {
         &.responsive li {
             display: block;
 
-            &:nth-child(n+1):nth-child(-n+3) {
+            &.mobile_li {
                 margin-top: 0.5em;
                 width: auto;
                 margin-left: 20px;
@@ -3049,8 +3078,10 @@ div.contact {
 
                 a {
                     display: block;
-                    background: $light_blue;
-                    box-shadow: $blue_button_box_shadow;
+                    background: $blue;
+                    box-shadow: 0px 10px 20px rgba(37, 98, 167, 0.5),
+                                inset 2px 2px 4px rgba(31, 101, 178, 0.75),
+                                inset -8px -8px 12px #1F65B3;;
                     padding-top: 10px;
                     padding-bottom: 10px;
                     color: $white;
@@ -3063,6 +3094,32 @@ div.contact {
                     display: block;
                     line-height: 3pt;
                     margin-right: 1em;
+                }
+
+                &.case_study {
+                    width: 80%;
+                    margin: 0.25em auto;
+
+                    &.blue {
+                        a {
+                            background: $light_blue;
+                            box-shadow: $blue_button_box_shadow;
+                        }
+                    }
+
+                    &.green {
+                        a {
+                            background: $light_green;
+                            box-shadow: $green_button_box_shadow;
+                        }
+                    }
+
+                    &.purple {
+                        a {
+                            background: $light_purple;
+                            box-shadow: $purple_button_box_shadow;
+                        }
+                    }
                 }
             }
         }
@@ -3125,7 +3182,7 @@ div.contact {
 @media all and (max-width: 450px) {
     div.container .case_study_page {
         .head_images {
-            margin-top: 90vw;
+            margin-top: 115vw;
         }
 
         /* ---------- THANKS ---------- */
